syntax = "proto3";

package io.vertx.protobuf;

import "google/protobuf/descriptor.proto";

option java_package = "io.vertx.protobuf.extension";
option java_outer_classname = "ExtensionProto";

extend google.protobuf.FieldOptions {
  optional bool type_interop = 4500;
  optional string reader_method = 4501;
  optional string writer_method = 4502;
}
